--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pr2-ft (0.1.4-focal) stable; urgency=medium
+
+  * Updating to focal
+
+ -- Shingo Kitagawa <shingogo@hotmail.co.jp>  Tue, 17 May 2022 23:38:00 +0900
+
 pr2-ft (0.1.3-precise) stable; urgency=low
 
   * Incrementing to SVN: r1234
